# syncer

./: Cargo.toml  LICENSE  README.md  download-latest.sh
.github/workflows/: publish-binaries.yml
src/: crypto.rs  helpers.rs  main.rs  maps.rs
