[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
sha2 = "*"
hex = "*"
ring = "*"
data-encoding = "*"
clap = { version = "3.2.5", features = ["derive"] }
